2010-07-15  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Darin Adler.

        An empty value for xml:lang isn't considered
        https://bugs.webkit.org/show_bug.cgi?id=42042

        Allow :lang selector to match empty values for xml:lang and
        lang attributes.

        Test: fast/css/lang-selector-empty-attribute.xhtml

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):

Canonical link: https://commits.webkit.org/54400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63560 268f45cc-cd09-0410-ab3c-d52691b4dbfc